update req object

--- a/apps/ws/package.json
+++ b/apps/ws/package.json
@@ -11,11 +11,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {    
-    "ws": "^8.18.0"
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2",
+    "ws": "^8.18.0",
+    "@repo/config": "workspace:*"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/ws": "^8.5.14",
     "esbuild": "^0.24.2"
   }
