--- a/apps/http/package.json
+++ b/apps/http/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "@repo/config": "workspace:*"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
