--- a/apps/http/package.json
+++ b/apps/http/package.json
@@ -15,12 +15,14 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "@repo/config": "workspace:*"
+    "@repo/config": "workspace:*",
+    "@repo/db": "workspace:*"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@repo/common": "workspace:*",
     "@types/jsonwebtoken": "^9.0.8",
     "esbuild": "^0.24.2"
   }
