--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,22 +1,21 @@
 {
   "name": "@repo/config",
   "version": "1.0.0",
-  "main": "./dist/index.js",
-  "type": "module",
-  "exports": {
-    ".": "./dist/index.js"
-  },
+  "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start"
+  },
+  "exports": {
+    "./config": "./src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^16.4.7",
+    "@types/node": "^22.13.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
