http user endpoints created

--- a/apps/http/package.json
+++ b/apps/http/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/index.ts --platform=node --bundle --outdir=dist",
-    "start": "node dist/index.js",
+    "build": "esbuild src/bin.ts --bundle --platform=node --outdir=dist",
+    "start": "node dist/bin.js",
     "dev": "npm run build && npm run start"
   },
   "keywords": [],
