--- a/apps/ws/package.json
+++ b/apps/ws/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.0",
-    "@repo/config": "workspace:*"
+    "@repo/config": "workspace:*",
+    "@repo/db": "workspace:*"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
